package eapli.ecourse.boardmanagement.newdomain;

public enum AccessLevel {
    WRITE,
    READ;
}