package eapli.ecourse.boardmanagement.repositories;

import eapli.ecourse.boardmanagement.newdomain.BoardCell;
import eapli.ecourse.boardmanagement.newdomain.BoardPermission;
import eapli.framework.domain.repositories.DomainRepository;

public interface BoardPermissionRepository extends DomainRepository<Long, BoardPermission> {
}
